--- a/style.css
+++ b/style.css
@@ -43,15 +43,15 @@ ul {
 li a {
     display:block;
     padding:10px;
-    margin-right:20px;
+    margin-right:30px;
     border:1px solid red;
     font-family: 'M PLUS Rounded 1c';
     font-size:20px;
 }
 
 li a:hover {
-    background-color:green;
-    border-radius:5px;
+    background-color:#737373;
+    border-radius:15px;
 }
 
 #main {
