--- a/style.css
+++ b/style.css
@@ -16,8 +16,9 @@ body {
 
 #logo {
     position:absolute;
-    top:1%;
-    left:2%;
+    top:1.5%;
+    left:1.5%;
+    width:70; height:67;
 }
 
 #search {
@@ -27,6 +28,25 @@ body {
 img {
     width: 70px;
     height: 67px;
+}
+
+#upper {
+    position:absolute;
+    top:1%;
+    left:5.5%;
+    font-family:'M PLUS Rounded 1c';
+    color:white;
+    font-size:36px;
+    width:225px; height:50px;
+    text-align:left;
+}
+
+#lower {
+    position:absolute;
+    top:5%;
+    left:5.5%;
+    font-family:'M PLUS Rounded 1c';
+    font-size:24px;
 }
 
 #menu {
@@ -46,6 +66,7 @@ li a {
     margin-right:30px;
     font-family: 'M PLUS Rounded 1c';
     font-size:20px;
+    border-radius:15px;
 }
 
 li a:hover {
